--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,14 +6,16 @@ version = "0.1.0"
 edition = "2018"
 
 [dependencies]
+futures = "*"
 log = "0.4"
+openssl = { version = "*", features = ["vendored"] }
 parquet = "5.5"
-rusqlite = { version = "0.26", features = ["time"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.2"
-time = "0.3"
+chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
+sqlx = { version = "0.5.9", features = [ "chrono", "sqlite", "runtime-tokio-native-tls" ] }
 warp = "0.3"
 
 [dev-dependencies]
