--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 [dependencies]
 futures = "*"
 log = "0.4"
+metrics = "0.16"
+metrics-exporter-prometheus = "0.5"
+
 openssl = { version = "*", features = ["vendored"] }
 parquet = "5.5"
 pretty_env_logger = "0.4"
