--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rweb = { version = "0.15", features = ["openapi"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.2"
+tokio-stream = { version = "0.1.8", features = ["signal"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.5.9", features = [ "chrono", "sqlite", "runtime-tokio-native-tls" ] }
