--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
 thiserror = "1"
 
-lazy_static = "1"
 openssl = { version = "*", features = ["vendored"] }
 parquet = "6.4"
 pretty_env_logger = "0.4"
@@ -21,6 +20,7 @@ rweb = { version = "0.15", features = ["openapi"] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.2"
+tracing = "0.1"
 tokio-stream = { version = "0.1", features = ["signal"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
