--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
 thiserror = "1"
 
+arrow2 = { version = "0.14", features = ["io_parquet"] }
 openssl = { version = "*", features = ["vendored"] }
 parquet = "6.4"
 pretty_env_logger = "0.4"
