Add schema support to slog
* Refactor out legacy conversion methods.
* Add Schema support for Slog
* Use Iterator::min and Iterator::max

Co-authored-by: Jamie Blondin <jblondin@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
 thiserror = "1"
 
-arrow2 = { version = "0.14", features = ["io_parquet"] }
+arrow2 = { git="https://github.com/WallarooLabs/arrow2", branch="fmurphy/upstream-0.14.1", features = ["io_parquet"] }
 openssl = { version = "*", features = ["vendored"] }
 parquet = "6.4"
 pretty_env_logger = "0.4"
