--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1"
 futures = "0.3"
+itertools = "0.10"
 log = "0.4"
 metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
