Plateau—extract transport types into separate package
* Schema support in HTTP

* Fix topic iteration

* Transformed plateau into a workspace with client and server

* Cleaned up warnings

* Extracted plateau transport types to separate package

* Addressed PR comment

Co-authored-by: Frank Murphy <frank@wallaroo.ai>

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,7 +13,7 @@ log = "0.4"
 metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
 thiserror = "1"
-
+plateau-transport = { path = "../transport" }
 arrow2 = { git="https://github.com/WallarooLabs/arrow2", branch="fmurphy/upstream-0.14.1", features = ["io_ipc", "io_parquet", "compute_filter", "compute_comparison"] }
 bytes = "1.2"
 openssl = { version = "*", features = ["vendored"] }
