--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ reqwest = { version = "0.11", features = ["json", "stream"] }
 url = "2.3"
 thiserror = "1.0"
 serde = "1.0"
+serde_qs = "0.10"
 futures = "0.3"
 bytes = "1.2"
 async-trait = "0.1"
