--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,6 +20,7 @@ openssl = { version = "*", features = ["vendored"] }
 pretty_env_logger = "0.4"
 rweb = { version = "0.15", features = ["openapi"] }
 serde_json = "1.0"
+serde_qs = { version = "0.10", features = ["warp"] }
 serde = { version = "1.0", features = ["derive"] }
 tempfile = "3.2"
 tracing = "0.1"
