--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -6,17 +6,17 @@ edition = "2021"
 
 [dependencies]
 plateau-transport = { path = "../transport" }
-reqwest = { version = "0.11", features = ["json", "stream"] }
-url = "2.3"
-thiserror = "1.0"
-serde = "1.0"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
+url = "2"
+thiserror = "1"
+serde = "1"
 serde_qs = "0.10"
 futures = "0.3"
-bytes = "1.2"
+bytes = "1"
 async-trait = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
-serde_json = "1.0"
+serde_json = "1"
