--- a/transport/Cargo.toml
+++ b/transport/Cargo.toml
@@ -9,7 +9,7 @@ rust-version = "1.60"
 serde = "1"
 rweb = "0.15"
 structopt = { version = "0.3", optional = true }
-arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "wallaroo/main", features = [
+arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/cast-fixed-size-fixed-size", features = [
     "compute_aggregate",
     "compute_cast",
     "compute_comparison",
