--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,6 +5,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+humantime-serde = { version = "1", optional = true }
+log = "0.4"
+tokio = { version = "1", features = ["full"], optional = true }
 plateau-transport = { path = "../transport" }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
 url = "2"
@@ -16,7 +19,12 @@ bytes = "1"
 async-trait = "0.1"
 
 [dev-dependencies]
+parking_lot = "0.11"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
 serde_json = "1"
+
+
+[features]
+batch = ["dep:humantime-serde", "dep:tokio"]
