--- a/transport/Cargo.toml
+++ b/transport/Cargo.toml
@@ -22,6 +22,7 @@ arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "wallaroo/20
     "io_json",
     "io_flight",
 ] }
+strum = { version = "0.24", features = ["derive"] }
 chrono = "0.4"
 thiserror = "1"
 
