--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+bytesize = {version = "1.1.0", features = ["serde"]}
+config = "0.13"
 futures = "0.3"
 itertools = "0.10"
 log = "0.4"
@@ -22,6 +24,7 @@ serde_json = "1"
 serde_qs = { version = "0.10", features = ["warp"] }
 serde = { version = "1", features = ["derive"] }
 tempfile = "3"
+toml = "0.7"
 tracing = "0.1"
 tokio-stream = { version = "0.1", features = ["signal"] }
 chrono = "0.4"
