--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,6 +30,7 @@ tokio-stream = { version = "0.1", features = ["signal"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
 sqlx = { version = "0.5", features = [ "chrono", "sqlite", "runtime-tokio-rustls" ] }
+rand = "0.8"
 
 [dev-dependencies]
 parquet = "6"
