--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,6 @@ members = [
     "cli",
     "server/bench"
 ]
+
+[patch.crates-io]
+arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "wallaroo/2023.3-0.17.0" }
