--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -37,3 +37,7 @@ parquet = "6"
 itermore = "0.1"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 uuid = { version = "1", features = ["v4", "fast-rng"]}
+
+sample-test = "0.1"
+sample-std = "0.1"
+sample-arrow2 = "0.17"
