--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,7 +9,7 @@ humantime-serde = { version = "1", optional = true }
 log = "0.4"
 tokio = { version = "1", features = ["full"], optional = true }
 plateau-transport = { path = "../transport" }
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "trust-dns" ] }
 url = "2"
 thiserror = "1"
 serde = "1"
