--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -17,6 +17,7 @@ serde_qs = "0.10"
 futures = "0.3"
 bytes = "1"
 async-trait = "0.1"
+lazy_static = "1.4"
 
 [dev-dependencies]
 parking_lot = "0.11"
@@ -24,6 +25,7 @@ tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
 serde_json = "1"
+plateau = { path = "../server" }
 
 
 [features]
