--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,9 @@ license = "MIT"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+test = []
+
 [dependencies]
 anyhow = "1"
 bytesize = {version = "1.1.0", features = ["serde"]}
