--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,7 +9,12 @@ humantime-serde = { version = "1", optional = true }
 log = "0.4"
 tokio = { version = "1", features = ["full"], optional = true }
 plateau-transport = { path = "../transport" }
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "stream", "trust-dns" ] }
+reqwest = { version = "0.11", default-features = false, features = [
+  "json",
+  "rustls-tls",
+  "stream",
+  "trust-dns",
+] }
 url = "2"
 thiserror = "1"
 serde = "1"
@@ -18,6 +23,11 @@ futures = "0.3"
 bytes = "1"
 async-trait = "0.1"
 lazy_static = "1.4"
+polars = { version = "0.31", optional = true, features = [
+  "ipc",
+  "dtype-full",
+  "describe",
+] }
 
 [dev-dependencies]
 parking_lot = "0.11"
@@ -30,3 +40,4 @@ plateau = { path = "../server" }
 
 [features]
 batch = ["dep:humantime-serde", "dep:tokio"]
+polars = ["dep:polars"]
