--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,6 +24,7 @@ parquet-format-safe = "0.2"
 plateau-transport = { path = "../transport" }
 bytes = "1"
 pretty_env_logger = "0.4"
+humantime-serde = "1"
 rweb = { version = "0.15", features = ["openapi"] }
 serde_json = "1"
 serde_qs = { version = "0.10", features = ["warp"] }
