--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -30,13 +30,14 @@ polars = { version = "0.31", optional = true, features = [
 ] }
 
 [dev-dependencies]
+anyhow = "1"
 parking_lot = "0.11"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
 serde_json = "1"
 plateau = { path = "../server" }
-
+pretty_env_logger = "0.4"
 
 [features]
 batch = ["dep:humantime-serde", "dep:tokio"]
