--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -21,6 +21,7 @@ metrics-exporter-prometheus = "0.5"
 thiserror = "1"
 parquet2 = { version = "0.17", default_features = false }
 parquet-format-safe = "0.2"
+plateau-client = { path = "../client", features = ["replicate"] }
 plateau-transport = { path = "../transport" }
 bytes = "1"
 pretty_env_logger = "0.4"
