--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -19,6 +19,7 @@ reqwest = { version = "0.11", default-features = false, features = [
 url = "2"
 thiserror = "1"
 serde = "1"
+serde_json = "1"
 serde_qs = "0.10"
 futures = "0.3"
 bytes = "1"
