--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -52,7 +52,10 @@ reqwest = { version = "0.11", default-features = false, features = [
   "rustls-tls",
 ] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
-
 sample-test = "0.1"
 sample-std = "0.1"
 sample-arrow2 = "0.17"
+
+[build-dependencies]
+chrono = "0.4"
+
