--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,6 @@
 [workspace]
-
-members = [
-    "client",
-    "server",
-    "transport",
-    "cli",
-    "server/bench"
-]
+resolver = "2"
+members = ["client", "server", "transport", "cli", "server/bench"]
 
 [patch.crates-io]
 arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/public-arrow-parquet-schema" }
