--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 [dependencies]
 backoff = { version = "0.4", features = ["tokio"], optional = true }
 humantime-serde = { version = "1", optional = true }
-log = "0.4"
 tokio = { version = "1", features = ["full"], optional = true }
 plateau-transport = { path = "../transport" }
 reqwest = { version = "0.11", default-features = false, features = [
@@ -21,6 +20,7 @@ thiserror = "1"
 serde = "1"
 serde_json = "1"
 serde_qs = "0.10"
+tracing = "0.1"
 futures = "0.3"
 bytes = "1"
 async-trait = "0.1"
@@ -39,7 +39,8 @@ tokio-util = "0.7"
 httptest = "0.15"
 serde_json = "1"
 plateau = { path = "../server" }
-pretty_env_logger = "0.4"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
 
 [features]
 batch = ["dep:humantime-serde", "dep:tokio"]
