--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,8 +14,7 @@ anyhow = "1"
 bytesize = { version = "1.1.0", features = ["serde"] }
 config = "0.13"
 futures = "0.3"
-itertools = "0.10"
-log = "0.4"
+itertools = "0.11"
 metrics = "0.16"
 metrics-exporter-prometheus = "0.5"
 thiserror = "1"
@@ -24,7 +23,6 @@ parquet-format-safe = "0.2"
 plateau-client = { path = "../client", features = ["replicate"] }
 plateau-transport = { path = "../transport" }
 bytes = "1"
-pretty_env_logger = "0.4"
 humantime-serde = "1"
 rweb = { version = "0.15", features = ["openapi"] }
 serde_json = "1"
@@ -33,10 +31,11 @@ serde = { version = "1", features = ["derive"] }
 tempfile = "3"
 toml = "0.7"
 tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tokio-stream = { version = "0.1", features = ["signal"] }
 chrono = "0.4"
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.5", features = [
+sqlx = { version = "0.7", features = [
   "chrono",
   "sqlite",
   "runtime-tokio-rustls",
@@ -58,4 +57,3 @@ sample-arrow2 = "0.17"
 
 [build-dependencies]
 chrono = "0.4"
-
