Filter partitions via regex in iteration
* Added support for partition_filter to be a regex

* Fix unit tests

* Rename to PartitionSelector

* Added smaller size limit

* Fixed missing renames

* Added two test cases. Cleaned up clippy warnings.

* Added third test for regex functionality

* Reworked partition_filter to test each partition against each filter.

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -43,6 +43,7 @@ sqlx = { version = "0.7", features = [
 systemstat = "0.2"
 rand = "0.8"
 uuid = "1.4"
+regex = "1.10"
 
 [dev-dependencies]
 itermore = "0.1"
