--- a/server/bench/Cargo.toml
+++ b/server/bench/Cargo.toml
@@ -15,3 +15,4 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+plateau = { path = "../" }
