--- a/transport/Cargo.toml
+++ b/transport/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.60"
 [dependencies]
 anyhow = "1"
 serde = "1"
-rweb = { version = "0.15", features = ["openapi"] }
+rweb = { version = "0.15", features = ["openapi"], optional = true }
 structopt = { version = "0.3", optional = true }
 arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars", features = [
   "compute_aggregate",
@@ -28,6 +28,9 @@ strum = { version = "0.24", features = ["derive"] }
 chrono = "0.4"
 thiserror = "1"
 regex = "1.10"
+utoipa = { version = "3", features = ["axum_extras"] }
 
 [features]
-structopt-cli = ["dep:structopt"]
+default = ["rweb"]
+rweb = ["dep:rweb"]
+structopt-cli = ["dep:rweb", "dep:structopt"]
