--- a/server/bench/Cargo.toml
+++ b/server/bench/Cargo.toml
@@ -6,7 +6,14 @@ edition = "2021"
 
 
 [dependencies]
+anyhow = "1"
 async-trait = "0.1"
+serde = { version = "1", features = ["derive"] }
+humantime-serde = "1"
+
+sample-std = "0.2.1"
+sample-arrow2 = "0.17.2"
+
 futures = "0.3"
 hdrhistogram = "7.5"
 rand = "0.8"
@@ -16,3 +23,10 @@ reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 plateau = { path = "../" }
+plateau-client = { path = "../../client", features = ["health"] }
+
+[profile.bench]
+debug = true
+
+[[bin]]
+name = "cv"
