--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -49,6 +49,7 @@ uuid = "1.4"
 regex = "1.10"
 
 [dev-dependencies]
+ctor = "0.2"
 itermore = "0.1"
 reqwest = { version = "0.11", default-features = false, features = [
   "json",
