--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 resolver = "2"
 members = ["client", "server", "transport", "cli", "server/bench"]
 
+
+[profile.bench]
+debug = true
+
+
 [patch.crates-io]
 arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars" }
 parquet2 = { git = "https://github.com/WallarooLabs/parquet2", branch = "more-writer-details" }
