--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -4,19 +4,23 @@ authors = ["Wallaroo Labs"]
 version = "0.1.0"
 edition = "2021"
 
+
 [dependencies]
-plateau-transport = { path = "../transport", features = ["structopt-cli"] }
-plateau-client = { path = "../client" }
+anyhow = "1"
+clap = { version = "4.5", features = ["derive"] }
 polars = { version = "0.36.2", features = [
   "ipc",
   "dtype-full",
 ], optional = true }
-structopt = "0.3"
 url = "2"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
-anyhow = "1"
 futures = "0.3"
 
+plateau-transport = { path = "../transport", features = ["clap"] }
+plateau-client = { path = "../client" }
+
+
 [features]
+default = ["polars"]
 polars = ["dep:polars", "plateau-client/polars"]
