--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -46,3 +46,4 @@ batch = ["dep:humantime-serde", "dep:tokio"]
 health = ["dep:tokio"]
 polars = ["dep:polars"]
 replicate = ["dep:backoff", "dep:tokio"]
+rweb = ["plateau-transport/rweb"]
