--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -52,6 +52,10 @@ regex = "1.10"
 [dev-dependencies]
 ctor = "0.2"
 itermore = "0.1"
+
+plateau-client = { path = "../client" }
+plateau-transport = { path = "../transport", features = ["test"] }
+
 reqwest = { version = "0.11", default-features = false, features = [
   "json",
   "rustls-tls",
