--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,7 +26,7 @@ plateau-transport = { path = "../transport" }
 bytes = "1"
 humantime-serde = "1"
 serde_json = "1"
-serde_qs = { version = "0.10", features = ["warp"] }
+serde_qs = { version = "0.12" }
 serde = { version = "1", features = ["derive"] }
 tempfile = "3"
 toml = "0.7"
