plateau workspace lints
* plateau: workspace lints
* plateau: drop unused itermore
* plateau: pull up config to 0.14
* plateau: pull up itertools to 0.12
* conductor: pull up config to 0.14
* unused_qualifications
* drop unused humantime_serde
* unused_qualifications
* unused_qualifications
* unused_qualifications
* qualify anyhow::Result
* unused_lifetimes
* unused_qualifications
* use serde_json as json

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,30 @@ debug = true
 [patch.crates-io]
 arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars" }
 parquet2 = { git = "https://github.com/WallarooLabs/parquet2", branch = "more-writer-details" }
+
+
+[workspace.lints.clippy]
+use_self = "warn"
+map_flatten = "warn"
+map_unwrap_or = "warn"
+large_futures = "warn"
+
+
+[workspace.lints.rust]
+deprecated_in_future = "warn"
+future_incompatible = "warn"
+# non_exhaustive_omitted_patterns = "warn"
+noop_method_call = "warn"
+# unreachable_pub = "warn"
+missing_debug_implementations = "warn"
+rust_2018_compatibility = "warn"
+rust_2021_compatibility = "warn"
+rust_2024_compatibility = "warn"
+rust_2018_idioms = "warn"
+trivial_casts = "warn"
+trivial_numeric_casts = "warn"
+unused = "warn"
+# unused_crate_dependencies = "warn"
+unused_lifetimes = "warn"
+unused_qualifications = "warn"
+# warnings = "deny"
