--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,9 +13,9 @@ test = []
 anyhow = "1"
 axum = { version = "0.6", features = ["headers"] }
 bytesize = { version = "1.1.0", features = ["serde"] }
-config = "0.13"
+config = "0.14"
 futures = "0.3"
-itertools = "0.11"
+itertools = "0.12"
 metrics = "0.22"
 metrics-exporter-prometheus = "0.13"
 thiserror = "1"
@@ -51,7 +51,6 @@ regex = "1.10"
 
 [dev-dependencies]
 ctor = "0.2"
-itermore = "0.1"
 
 plateau-client = { path = "../client" }
 plateau-transport = { path = "../transport", features = ["test"] }
@@ -68,5 +67,10 @@ sample-arrow2 = "0.17.2"
 
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 
+
 [build-dependencies]
 chrono = "0.4"
+
+
+[lints]
+workspace = true
