--- a/transport/Cargo.toml
+++ b/transport/Cargo.toml
@@ -9,6 +9,7 @@ rust-version = "1.60"
 [dependencies]
 anyhow = "1"
 serde = "1"
+serde_with = "3.7"
 rweb = { version = "0.15", features = ["openapi"], optional = true }
 clap = { version = "4.5", features = ["derive"], optional = true }
 arrow2 = { git = "https://github.com/WallarooLabs/arrow2", branch = "fmurphy/match-polars", features = [
