--- a/transport/Cargo.toml
+++ b/transport/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "plateau-transport"
-authors = ["Wallaroo Labs"]
-version = "0.1.0"
-edition = "2021"
-rust-version = "1.60"
+
+version.workspace = true
+edition.workspace = true
+repository.workspace = true
+authors.workspace = true
 
 
 [dependencies]
