--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+    - name: Announce Rust
+      shell: bash
+      run: cargo --version && rustc --version
     - name: Check formatting
       shell: bash
       run: make check-fmt
