--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,3 +29,85 @@ jobs:
     - name: Run tests
       shell: bash
       run: make test
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up tags
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/wallaroolabs/plateau
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+          labels: |
+            org.opencontainers.image.vendor="Wallaroo Labs"
+            org.opencontainers.image.source="https://github.com/WallarooLabs/plateau/Dockerfile"
+            org.opencontainers.image.title="plateau"
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PUSH_CONTAINER_TOKEN }}
+      - name: Login to us-docker.pkg.dev/wallaroo-dev-253816/docker-hub-us
+        uses: docker/login-action@v3
+        with:
+          registry: us-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.US_PKG_DEV_CACHE_JSON_KEY }}
+      - name: Build and push image
+        uses: docker/build-push-action@v5
+        with:
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache
+          cache-to: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache,mode=max
+          build-args: |
+            RUST_VERSION=1.76.0
+  build2:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Setup QEMU
+        uses: docker/setup-qemu-action@v3
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Set up tags
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/wallaroolabs/plateau
+          tags: |
+            type=sha
+            type=ref,event=branch
+            type=semver,pattern={{version}}
+          labels: |
+            org.opencontainers.image.vendor="Wallaroo Labs"
+            org.opencontainers.image.source="https://github.com/WallarooLabs/plateau/Dockerfile"
+            org.opencontainers.image.title="plateau"
+      - name: Login to ghcr.io
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.PUSH_CONTAINER_TOKEN }}
+      - name: Login to us-docker.pkg.dev/wallaroo-dev-253816/docker-hub-us
+        uses: docker/login-action@v3
+        with:
+          registry: us-docker.pkg.dev
+          username: _json_key
+          password: ${{ secrets.US_PKG_DEV_CACHE_JSON_KEY }}
+      - name: Build image
+        shell: bash
+        run: |
+          echo "::group::Building"
+          make image
+          echo "::endgroup::"
