--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -21,7 +21,7 @@ hdrhistogram = "7.5"
 rand = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-reqwest = { version = "0.11", features = ["json"] }
+reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
 
