--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,7 +10,6 @@ authors.workspace = true
 [dependencies]
 backoff = { version = "0.4", features = ["tokio"], optional = true }
 tokio = { version = "1", features = ["full"], optional = true }
-plateau-transport = { path = "../transport" }
 reqwest = { version = "0.11", default-features = false, features = [
   "json",
   "rustls-tls",
@@ -32,6 +31,8 @@ polars = { version = "0.36.2", optional = true, features = [
   "dtype-full",
 ] }
 
+plateau-transport.workspace = true
+
 
 [dev-dependencies]
 anyhow = "1"
@@ -40,8 +41,9 @@ tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
 serde_json = "1"
-plateau = { path = "../server" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+plateau-server.workspace = true
 
 
 [features]
