--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["client", "server", "transport", "cli", "bench", "plateau"]
+members = ["client", "server", "transport", "cli", "bench", "plateau", "test"]
 
 
 [workspace.package]
@@ -11,10 +11,11 @@ repository = "https://github.com/WallarooLabs/plateau"
 
 
 [workspace.dependencies]
-plateau-client = { path = "./client" }
-plateau-transport = { path = "./transport" }
 plateau-cli = { path = "./cli" }
+plateau-client = { path = "./client" }
 plateau-server = { path = "./server" }
+plateau-test = { path = "./test" }
+plateau-transport = { path = "./transport" }
 plateau = { path = "./plateau" }
 
 
