--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -56,21 +56,19 @@ plateau-transport.workspace = true
 
 [dev-dependencies]
 ctor = "0.2"
-
 reqwest = { version = "0.11", default-features = false, features = [
   "json",
   "rustls-tls",
 ] }
+test-log = { version = "0.2", default-features = false, features = ["trace"] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 
 sample-test = "0.2.1"
 sample-std = "0.2.1"
 sample-arrow2 = "0.17.2"
 
-test-log = { version = "0.2", default-features = false, features = ["trace"] }
-
 plateau-client.workspace = true
-plateau-transport = { workspace = true, features = ["test"] }
+plateau-test.workspace = true
 
 
 [lints]
