Disable build2 step

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -77,6 +77,8 @@ jobs:
           build-args: |
             RUST_VERSION=1.76.0
   build2:
+    if: false
+    description: Legacy build step, unused. It is kept here for the reference only.
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
