--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -56,6 +56,7 @@ reqwest = { version = "0.11", default-features = false, features = [
   "json",
   "rustls-tls",
 ] }
+rstest = "0.21"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 uuid = { version = "1", features = ["v4", "fast-rng"] }
 
