--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -43,6 +43,7 @@ serde_json = "1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 
 plateau-server.workspace = true
+plateau-test.workspace = true
 
 
 [features]
