--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,6 +13,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   REGISTRY_IMAGE: ghcr.io/wallaroolabs/plateau
+  RUST_VERSION: 1.76.0
 
 jobs:
   check:
@@ -80,7 +81,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
           build-args: |
-            RUST_VERSION=1.76.0
+            RUST_VERSION=${{ env.RUST_VERSION }}
 
       - name: Export digest
         run: |
@@ -141,7 +142,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,name=${{ env.REGISTRY_IMAGE }},push-by-digest=true,name-canonical=true,push=true
           build-args: |
-            RUST_VERSION=1.76.0
+            RUST_VERSION=${{ env.RUST_VERSION }}
 
       - name: Export digest
         run: |
@@ -203,136 +204,3 @@ jobs:
       - name: Inspect image
         run: |
           docker buildx imagetools inspect ${{ env.REGISTRY_IMAGE }}:${{ steps.meta.outputs.version }}
-
-  build:
-    if: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Set up tags
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/wallaroolabs/plateau
-          tags: |
-            type=sha
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-          labels: |
-            org.opencontainers.image.vendor="Wallaroo Labs"
-            org.opencontainers.image.source="https://github.com/WallarooLabs/plateau/Dockerfile"
-            org.opencontainers.image.title="plateau"
-      - name: Login to ghcr.io
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PUSH_CONTAINER_TOKEN }}
-      - name: Login to us-docker.pkg.dev/wallaroo-dev-253816/docker-hub-us
-        uses: docker/login-action@v3
-        with:
-          registry: us-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.US_PKG_DEV_CACHE_JSON_KEY }}
-      - name: Build and push image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache
-          cache-to: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache,mode=max
-          build-args: |
-            RUST_VERSION=1.76.0
-
-  build-arm:
-    if: false
-    runs-on: buildjet-4vcpu-ubuntu-2204-arm
-    steps:
-      - uses: actions/checkout@v4
-      # - name: Setup QEMU
-      #   uses: docker/setup-qemu-action@v3
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Set up tags
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/wallaroolabs/plateau
-          tags: |
-            type=sha
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-          labels: |
-            org.opencontainers.image.vendor="Wallaroo Labs"
-            org.opencontainers.image.source="https://github.com/WallarooLabs/plateau/Dockerfile"
-            org.opencontainers.image.title="plateau"
-      - name: Login to ghcr.io
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PUSH_CONTAINER_TOKEN }}
-      - name: Login to us-docker.pkg.dev/wallaroo-dev-253816/docker-hub-us
-        uses: docker/login-action@v3
-        with:
-          registry: us-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.US_PKG_DEV_CACHE_JSON_KEY }}
-      - name: Build and push image
-        uses: docker/build-push-action@v5
-        with:
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache
-          cache-to: type=registry,ref=ghcr.io/wallaroolabs/plateau:buildcache,mode=max
-          build-args: |
-            RUST_VERSION=1.76.0
-
-
-  # Legacy build step, unused. It is kept here for the reference only.
-  build2:
-    if: false
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Setup Docker Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Set up tags
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/wallaroolabs/plateau
-          tags: |
-            type=sha
-            type=ref,event=branch
-            type=semver,pattern={{version}}
-          labels: |
-            org.opencontainers.image.vendor="Wallaroo Labs"
-            org.opencontainers.image.source="https://github.com/WallarooLabs/plateau/Dockerfile"
-            org.opencontainers.image.title="plateau"
-      - name: Login to ghcr.io
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.PUSH_CONTAINER_TOKEN }}
-      - name: Login to us-docker.pkg.dev/wallaroo-dev-253816/docker-hub-us
-        uses: docker/login-action@v3
-        with:
-          registry: us-docker.pkg.dev
-          username: _json_key
-          password: ${{ secrets.US_PKG_DEV_CACHE_JSON_KEY }}
-      - name: Build image
-        shell: bash
-        run: |
-          echo "::group::Building"
-          make image
-          echo "::endgroup::"
