Disable rust_2024_compatibility lint

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ noop_method_call = "warn"
 missing_debug_implementations = "warn"
 rust_2018_compatibility = "warn"
 rust_2021_compatibility = "warn"
-rust_2024_compatibility = "warn"
+# rust_2024_compatibility = "warn"
 rust_2018_idioms = "warn"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
