--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,19 +37,19 @@ large_futures = "warn"
 
 
 [workspace.lints.rust]
+future_incompatible = { level = "warn", priority = -1 }
+rust_2018_compatibility = { level = "warn", priority = -1 }
+rust_2021_compatibility = { level = "warn", priority = -1 }
+rust_2024_compatibility = { level = "warn", priority = -1 }
+rust_2018_idioms = { level = "warn", priority = -1 }
+unused = { level = "warn", priority = -1 }
 deprecated_in_future = "warn"
-future_incompatible = "warn"
 # non_exhaustive_omitted_patterns = "warn"
 noop_method_call = "warn"
 # unreachable_pub = "warn"
 missing_debug_implementations = "warn"
-rust_2018_compatibility = "warn"
-rust_2021_compatibility = "warn"
-# rust_2024_compatibility = "warn"
-rust_2018_idioms = "warn"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
-unused = "warn"
 # unused_crate_dependencies = "warn"
 unused_lifetimes = "warn"
 unused_qualifications = "warn"
