+unused_crate_dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ noop_method_call = "warn"
 missing_debug_implementations = "warn"
 trivial_casts = "warn"
 trivial_numeric_casts = "warn"
-# unused_crate_dependencies = "warn"
+unused_crate_dependencies = "warn"
 unused_lifetimes = "warn"
 unused_qualifications = "warn"
 # warnings = "deny"
