--- a/bench/Cargo.toml
+++ b/bench/Cargo.toml
@@ -21,9 +21,10 @@ hdrhistogram = "7.5"
 rand = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-reqwest = { version = "0.11", features = ["json"] }
 serde_json = "1.0"
 tokio = { version = "1", features = ["full"] }
+
+reqwest.workspace = true
 
 plateau-server.workspace = true
 plateau-client = { workspace = true, features = ["health"] }
