--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -17,7 +17,7 @@ chrono = "0.4"
 config = "0.14"
 futures = "0.3"
 metrics = "0.22"
-metrics-exporter-prometheus = "0.13"
+metrics-exporter-prometheus = "0.16"
 thiserror = "1"
 parquet2 = { version = "0.17", default-features = false }
 parquet-format-safe = "0.2"
@@ -46,10 +46,6 @@ plateau-transport.workspace = true
 
 [dev-dependencies]
 itertools = "0.13"
-reqwest = { version = "0.11", default-features = false, features = [
-  "json",
-  "rustls-tls",
-] }
 tempfile = "3"
 test-log = { version = "0.2", default-features = false, features = ["trace"] }
 uuid = { version = "1.10", features = ["v4"] }
@@ -57,6 +53,8 @@ uuid = { version = "1.10", features = ["v4"] }
 sample-test = "0.2.1"
 sample-std = "0.2.1"
 sample-arrow2 = "0.17.2"
+
+reqwest.workspace = true
 
 plateau-client.workspace = true
 plateau-test.workspace = true
