--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -35,6 +35,7 @@ plateau-transport.workspace = true
 
 [dev-dependencies]
 anyhow = "1"
+parking_lot = "0.11"
 tokio = { version = "1", features = ["full"] }
 tokio-util = "0.7"
 httptest = "0.15"
