--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
   check:
-    runs-on: ubuntu-latest
+    runs-on: "8x32g"
     steps:
     - uses: actions/checkout@v4
     - name: Announce Rust
